testsuite/tests/aggregate/invalid-checks/foo.gpr
project Foo is
   for Source_Files use ("a");
end Foo;
